--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>AR-USDZ sample - Autodesk Forge</title>
+  <title>AR-USDZ GLB sample - Autodesk Platform Services</title>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="https://github.com/Autodesk-Forge/learn.forge.viewmodels/raw/master/img/favicon.ico">
   <!-- Bootstrap & qrcode -->
@@ -21,14 +21,14 @@
       <ul class="nav navbar-nav left">
         <li>
           <a href="http://developer.autodesk.com" target="_blank">
-            <img alt="Autodesk Forge" src="http://developer.static.autodesk.com/images/logo_forge-2-line.png" height="30">
+            <img alt="Autodesk Platform Services" src="https://cdn.autodesk.io/logo/black/stacked.png" height="20">
           </a>
         </li>
       </ul>
     </div>
   </nav>
   <!-- End of navbar -->
-  <div class="wrapper" id="cards-container">
+  <div class="wrapper" id="cards-container" style="visibility: hidden;">
     <button id="upload" class="btn btn-light" style="z-index: 13; position: fixed; right:5vw; top:88vh">
       <img id="buttonUpload" width="50" src="./img/upload-solid.svg"> UPLOAD
     </button>
