--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </div>
   </nav>
   <!-- End of navbar -->
-  <div class="wrapper" id="cards-container" style="visibility: hidden;">
-    <button id="upload" class="btn btn-light" style="z-index: 13; position: fixed; right:5vw; top:88vh">
+  <div class="wrapper" id="cards-container">
+    <button id="upload" class="btn btn-light" style="z-index: 13; position: fixed; right:5vw; top:88vh" style="visibility: hidden;">
       <img id="buttonUpload" width="50" src="./img/upload-solid.svg"> UPLOAD
     </button>
   </div>
